--- a/Navigator/package.json
+++ b/Navigator/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "finders",
+  "name": "navigator",
   "version": "1.0.0",
-  "description": "Visualization for gelephu Street Addressing",
+  "description": "Visualization for Gelephu Street Addressing",
   "main": "index.jsx",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --colors --hot",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hbbhattarai/Finders.git"
+    "url": "git+https://github.com/hbbhattarai/Navigator.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hbbhattarai/Finders/issues"
+    "url": "https://github.com/hbbhattarai/Navigator/issues"
   },
-  "homepage": "https://hbbhattarai.github.io/Finders",
+  "homepage": "https://hbbhattarai.github.io/Navigator",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
