--- a/Navigator/package.json
+++ b/Navigator/package.json
@@ -46,10 +46,11 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-directions": "^4.1.1",
     "@material-ui/core": "^3.5.1",
     "@material-ui/lab": "^3.0.0-alpha.23",
     "babel-loader": "^7.1.5",
-    "mapbox-gl": "^2.11.1",
+    "mapbox-gl": "^2.12.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
